--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^21.1.0",
+    "@types/md5": "^2.3.2",
     "@types/node": "^18.14.0",
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
@@ -35,6 +37,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
+    "terser": "^5.16.6",
     "typescript": "~4.7.4",
     "unplugin-auto-import": "^0.15.0",
     "unplugin-vue-components": "^0.24.0",
